K8S/command-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
        - name: commandservice
          image: 743477/commandservice
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: command-cluster-srv
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
    - name: commandservice
      protocol: TCP
      port: 80
