K8S/platform-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: platform-deploy
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: platformservice
  template:
    metadata: 
      labels: 
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: 743477/platformservice:v1.1
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: platform-cluster-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
