K8S/redis-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
              name: redis-port

---
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-srv
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: redis-port
      protocol: TCP
      port: 6379
      targetPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis-loadbalancer-srv
spec:
  type: NodePort
  selector:
    app: redis
  ports:
    - name: redis-port
      protocol: TCP
      port: 6379
      targetPort: 6379
